jmx实现对项目的动态配置

--- a/pom.xml
+++ b/pom.xml
@@ -64,6 +64,15 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+				<configuration>
+					<jvmArguments>
+						-Dcom.sun.management.jmxremote
+						-Dcom.sun.management.jmxremote.port=8082
+						-Dcom.sun.management.jmxremote.authenticate=false
+						-Dcom.sun.management.jmxremote.ssl=false
+						-Djava.rmi.server.hostname=127.0.0.1
+					</jvmArguments>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
