--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,3 +21,6 @@ management.endpoint.health.show-details=always
 
 # ENDPOINTS WEB CONFIGURATION
 management.endpoints.web.exposure.include=*
+
+spring.jmx.enabled=true
+management.endpoints.jmx.domain=com.example.actuatordemo.jmx
